--- a/style.css
+++ b/style.css
@@ -53,3 +53,59 @@ button{
 h2{
     color: #a0a1a7;
 }
+
+@media screen and (min-width: 360px) and (max-width: 768px) {
+    section{
+        overflow: scroll;
+        margin-top: 20%;
+    }
+    .upload{
+        margin-left: 0;
+    }
+    .button{
+        margin-left: -20%;
+        width: 20vw;
+    }
+    .save{
+        width: 20vw;
+        margin-top: 10%;
+        margin-left: 230%;
+    }
+}
+@media screen and (min-width: 280px) and (max-width: 359px) {
+    section{
+        overflow: scroll;
+        margin-top: 30%;
+    }
+    .upload{
+       margin-left: 0;
+    }
+    .button{
+       margin-top: 20%;
+       width: 50vw;
+    }
+    .save{
+        width: 50vw;
+        margin-top: 20%;
+        margin-left: 280%;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    section{
+        overflow: scroll;
+        margin-top: 30%;
+    }
+    .upload{
+       margin-left: 20%;
+    }
+    .button{
+       margin-top: 20%;
+       width: 20vw;
+    }
+    .save{
+        width: 20vw;
+        margin-top: 0%;
+        margin-left: 10%;
+    }
+}
